--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Señalización Vertical</title>
+    <script src="index.js"></script>
     <h1>señalización vertical de la ciudad de Madrid</h1>
     <ul>
         <li>R_301_40</li>
